--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,36 +2,24 @@ name: Go CI
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
 
-  audit:
+  build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.17
-
-    - name: Verify dependencies
-      run: go mod verify
+        go-version: 1.18
 
     - name: Build
-      run: go build -v ./...
+      run: make out/example
 
-    - name: Run go vet
-      run: go vet ./...
-
-    - name: Install staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
-    - name: Run staticcheck
-      run: staticcheck ./...
-
-    - name: Run tests
-      run: go test -race -vet=off ./...
+    - name: Test
+      run: make test
